--- a/style.css
+++ b/style.css
@@ -16,25 +16,26 @@ body {
     background-color: #fff;
     color: #171717;
     padding: 2rem;
-    width: 50%;
+    width: 80%;
     margin: 3rem auto;
-    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 1rem;
     box-shadow: rgba(237, 237, 255, 0.2) 0px 7px 29px 0px;
 }
 
 .weather_header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    width: 100%;
 }
 
 input {
     border: none;
     background: #2e2e2e;
     color: #fff;
-    width: 100%;
     margin: auto;
     outline: none;
+    width: 100%;
     padding: 0.7rem 2.5rem;
     border-radius: 5px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -46,7 +47,7 @@ input::placeholder {
 
 .weather_search {
     position: relative;
-    width: 70%;
+    width: 100%;
 }
 
 .weather_search i {
@@ -69,11 +70,15 @@ input::placeholder {
     margin-right: 0.5rem;
 }
 
+.main-div {
+    width: 100%;
+    display: flex;
+}
+
 .weather_body {
-    /* display: grid;
-    grid-template-columns: repeat(1, 1fr); */
     text-align: center;
     margin-top: 3rem;
+    width: 50%;
 }
 
 .weather_datetime {
@@ -83,16 +88,15 @@ input::placeholder {
 
 .weather_forecast {
     background: #1e1e1e;
-    /* background-color: #f7f7f7; */
     color: #fff;
-    /* color: #171717; */
     display: inline-block;
     padding: 0.5rem 1rem;
     border-radius: 30px;
 }
 
 .weather_icon img {
-    width: 100px;
+    width: 15rem;
+    height: auto;
     filter: drop-shadow(2px 4px 6px black);
     -webkit-filter: drop-shadow(2px 4px 6px black);
 }
@@ -107,7 +111,7 @@ input::placeholder {
 }
 
 .weather_minmax p {
-    font-size: 14px;
+    font-size: 1.3rem;
     margin: 0.5rem;
 }
 
@@ -116,6 +120,7 @@ input::placeholder {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 1rem;
     margin-top: 3rem;
+    width: 50%;
 }
 
 .weather_card {
@@ -143,6 +148,18 @@ input::placeholder {
         width: 90%;
     }
 
+    .main-div {
+        flex-direction: column;
+    }
+
+    .weather_body {
+        width: 100%;
+    }
+
+    .weather_info {
+        width: 100%;
+    }
+
     .weather_header {
         flex-direction: column;
     }
@@ -160,4 +177,4 @@ input::placeholder {
     .weather_search {
         width: 100%;
     }
-} 
+}
